--- a/InsuranceManagement_RedBadge/Views/Client/Index.cshtml
+++ b/InsuranceManagement_RedBadge/Views/Client/Index.cshtml
@@ -67,7 +67,7 @@
         <td>
             @Html.ActionLink("Edit", "Edit", new { id = item.ClientID }) |
             @Html.ActionLink("Details", "Details", new { id = item.ClientID }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Delete", "Delete", new { id = item.ClientID })
         </td>
     </tr>
 }
