Front End, DateTime Adjustment

--- a/InsuranceManagement_RedBadge/Views/Home/About.cshtml
+++ b/InsuranceManagement_RedBadge/Views/Home/About.cshtml
@@ -4,4 +4,8 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>In the beginning there were Insurance Forms on Paper.  </p>
+<p>Those pages could be lost! Those pages could have coffee spilled all over them!  The dog could eat them!  </p>
+<p>Then there was Insurance Management Software - the software that makes all those paper forms a thing of the past.  Capture your clients information in real time and never worry about losing important information again!</p><p>In the beginning there were Insurance Forms on Paper.  </p>
+<p>Those pages could be lost! Those pages could have coffee spilled all over them!  The dog could eat them!  </p>
+<p>Then there was Insurance Management Software - the software that makes all those paper forms a thing of the past.  Capture your clients information in real time and never worry about losing important information again!</p>
