--- a/InsuranceManagement_RedBadge/Views/Home/Contact.cshtml
+++ b/InsuranceManagement_RedBadge/Views/Home/Contact.cshtml
@@ -5,13 +5,12 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    Marcia Rolfingsmeyer<br />
+    Carmle, IN 46032<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    317.902.2039
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Email: </strong>   <a href="mailto:rolfingsmeyer@gmail.com">rolfingsmeyer@gmail.com</a><br />
 </address>
