--- a/InsuranceManagement_RedBadge/Views/Shared/_Layout.cshtml
+++ b/InsuranceManagement_RedBadge/Views/Shared/_Layout.cshtml
@@ -22,10 +22,12 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@if (User.Identity.IsAuthenticated)
+                    <li>
+                        @if (User.Identity.IsAuthenticated)
                         {
                         <li>@Html.ActionLink("Clients", "Index", "Client")</li>
-                        }
+                        <li>@Html.ActionLink("Auto", "Index", "Auto")</li>
+                    }
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
