--- a/InsuranceManagement_RedBadge/Views/Client/Index.cshtml
+++ b/InsuranceManagement_RedBadge/Views/Client/Index.cshtml
@@ -4,11 +4,12 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Client Index</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+
 
 @if (TempData.ContainsKey("SaveResult"))
 {
@@ -20,7 +21,6 @@
     @TempData["SaveResult"]
 </div>
 }
-
 <table class="table">
     <tr>
         <th>
