--- a/InsuranceManagement_RedBadge/Views/PersonalAuto/Delete.cshtml
+++ b/InsuranceManagement_RedBadge/Views/PersonalAuto/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model InsuranceManagement.Models.Auto.AutoDetail
+﻿@model InsuranceManagement.Models.PersonalAuto.PersonalAutoDetail
 
 @{
     ViewBag.Title = "Delete";
@@ -8,9 +8,16 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Auto</h4>
+    <h4>Personal Auto</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.AutoID)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.AutoID)
+        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.Make)
@@ -138,6 +145,54 @@
 
         <dd>
             @Html.DisplayFor(model => model.YearOfClaim)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.PersonalAutoID)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PersonalAutoID)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.IsFullCoverage)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.IsFullCoverage)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.IsLiability)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.IsLiability)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.IsUninsuredMotorist)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.IsUninsuredMotorist)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.IsCarRental)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.IsCarRental)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.IsMedicalCoverage)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.IsMedicalCoverage)
         </dd>
 
     </dl>
