--- a/InsuranceManagement_RedBadge/Views/Shared/_Layout.cshtml
+++ b/InsuranceManagement_RedBadge/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Insurance Management", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("iManage", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -26,7 +26,7 @@
                         @if (User.Identity.IsAuthenticated)
                         {
                         <li>@Html.ActionLink("Clients", "Index", "Client")</li>
-                        <li>@Html.ActionLink("Auto", "Index", "Auto")</li>
+                        <li>@Html.ActionLink("Personal", "Index", "Auto")</li>
                     }
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
