--- a/InsuranceManagement_RedBadge/Views/Client/Details.cshtml
+++ b/InsuranceManagement_RedBadge/Views/Client/Details.cshtml
@@ -7,6 +7,7 @@
 <h2>Details</h2>
 
 <div>
+    <h4>Client</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -92,6 +93,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ClientID}) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.ClientID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
