--- a/InsuranceManagement_RedBadge/Views/CommercialAuto/Details.cshtml
+++ b/InsuranceManagement_RedBadge/Views/CommercialAuto/Details.cshtml
@@ -1,14 +1,13 @@
-﻿@model InsuranceManagement.Models.PersonalAuto.PersonalAutoDetail
+﻿@model InsuranceManagement.Models.CommercialAuto.CommercialAutoDetail
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Details";
 }
 
-<h2>Delete</h2>
+<h2>Details</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>PersonalAuto</h4>
+    <h4>CommercialAuto</h4>
     <hr />
     <dl class="dl-horizontal">
 
@@ -157,54 +156,56 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.IsFullCoverage)
+            @Html.DisplayNameFor(model => model.NumberInFleet)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.IsFullCoverage)
+            @Html.DisplayFor(model => model.NumberInFleet)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.IsLiability)
+            @Html.DisplayNameFor(model => model.NumberOfDrivers)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.IsLiability)
+            @Html.DisplayFor(model => model.NumberOfDrivers)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.IsUninsuredMotorist)
+            @Html.DisplayNameFor(model => model.DOTNumber)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.IsUninsuredMotorist)
+            @Html.DisplayFor(model => model.DOTNumber)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.IsCarRental)
+            @Html.DisplayNameFor(model => model.RadiusOfOperation)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.IsCarRental)
+            @Html.DisplayFor(model => model.RadiusOfOperation)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.IsMedicalCoverage)
+            @Html.DisplayNameFor(model => model.CompDeductible)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.IsMedicalCoverage)
+            @Html.DisplayFor(model => model.CompDeductible)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.CollisionDeductible)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CollisionDeductible)
+        </dd>
 
     </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
 </div>
+<p>
+    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    @Html.ActionLink("Back to List", "Index")
+</p>
