--- a/InsuranceManagement_RedBadge/Views/PersonalAuto/Edit.cshtml
+++ b/InsuranceManagement_RedBadge/Views/PersonalAuto/Edit.cshtml
@@ -12,10 +12,10 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>Personal Auto </h4>
+    <h4>PersonalAuto</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.PersonalAutoID)
+    @Html.HiddenFor(model => model.AutoID)
 
 
     <div class="form-group">
@@ -197,6 +197,14 @@
                 @Html.EditorFor(model => model.IsMedicalCoverage)
                 @Html.ValidationMessageFor(model => model.IsMedicalCoverage, "", new { @class = "text-danger" })
             </div>
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.ClientID, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.ClientID, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.ClientID, "", new { @class = "text-danger" })
         </div>
     </div>
 
