--- a/InsuranceManagement_RedBadge/Views/Home/About.cshtml
+++ b/InsuranceManagement_RedBadge/Views/Home/About.cshtml
@@ -1,8 +1,7 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title</h2>
 
 <p>In the beginning there were Insurance Forms on Paper.  </p>
 <p>Those pages could be lost! Those pages could have coffee spilled all over them!  The dog could eat them!  </p>
