--- a/InsuranceManagement_RedBadge/Views/Home/Index.cshtml
+++ b/InsuranceManagement_RedBadge/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="jumbotron">
     <h1>iManage</h1>
     <p class="lead">Insurance Management software customized to fit your needs.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p><a href="https://localhost:44359/Home/Contact" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
@@ -14,18 +14,18 @@
         <p>
             Want to test our product?
         </p>
-        <p><a class="btn btn-default" href="">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://localhost:44359/Home/Contact">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Forms Development</h2>
         <p>
             Any Insurance Form you use - I can create customized for you!
         </p>
-        <p><a class="btn btn-default" href="">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://localhost:44359/Home/Contact">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Insurance Shopping</h2>
         <p>Coming soon - plug in to shop multiple Insurance company rates at one time! .</p>
-        <p><a class="btn btn-default" href="">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://localhost:44359/Home/Contact">Learn more &raquo;</a></p>
     </div>
 </div>
